...
            .navigationTitle("WelcomTalk")
            .toolbar {
                ToolbarItem(placement: .navigationBarLeading) {
                    Button {
                        showingMessagingSettings = true
                    } label: {
                        Image(systemName: "network")
                    }
                    .accessibilityLabel("network")
                    .tint(.blue)
                }

                ToolbarItem(placement: .navigationBarTrailing) {
...
